[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyvaracl"
author = "Riley Flynn"
author-email = "riley@rileyflynn.me"
home-page = "https://github.com/nint8835/PyVarACL"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 5.2.0"
]
dev = [
    "black >= 19.3b0"
]

